Samples/Errors/AssignEmptyExpressionToAConstant.gs
//This is a G# program with errors.

a = ;//What happens if a declaration receives  the empty expression. It should be a type error.

